# mpgem_tool

./: .gitignore  COMMANDS.md  README.md  demo_matrix.tsv  demo_probe_matrix.tsv  pyproject.toml
src/mpgem/: __init__.py  cli.py
src/mpgem/mpgemnorm/: cli.py  core.py
src/mpgem/mpgemnorm/data/: probe_map.tsv  reference_gene_averages.tsv  reference_rqd.npy
