[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpgem"
version = "0.1.0"
description = "Reference quantile normalization for microarray (GPL570) matrices"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]
[project.scripts]
mpgem = "mpgem.cli:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"mpgem.mpgemnorm" = ["data/*.tsv", "data/*.npy"]

[tool.setuptools.package-dir]
"" = "src"
